[project]
name = "financialdenoising"
version = "0.1.0"
description = "Diffusion and Mamba based denoising pipeline for financial time series features"
readme = "README.md"
authors = [
    { name = "pierre", email = "jrjinwoo@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
